Added a copy workspace to slash unwanted code

--- a/Project_3-Copy1.ipynb
+++ b/Project_3-Copy1.ipynb
@@ -21,17 +21,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Warning: Cannot change to a different GUI toolkit: qt5. Using notebook instead.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from math import *\n",
     "from modsim import *\n",
@@ -49,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -73,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -140,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -217,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -268,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -334,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +348,7 @@
        "<Quantity(21977.030486757863, 'meter / second')>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,20 +460,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "done\n"
+      "C:\\ProgramData\\Miniconda3\\lib\\site-packages\\matplotlib\\axes\\_axes.py:545: UserWarning: No labelled objects found. Use label='...' kwarg on individual plots.\n",
+      "  warnings.warn(\"No labelled objects found. \"\n"
      ]
     }
    ],
    "source": [
     "set_duration = 30000000\n",
-    "num_steps = 100000\n",
+    "num_steps = 100\n",
     "mars = Condition(orbital_radius = 227.9e9 * m,\n",
     "              radius = 3396200 * m,\n",
     "              mass = .64171e24 * kg,\n",
@@ -505,21 +498,56 @@
     "                ts_f = num_steps\n",
     ")\n",
     "\n",
+    "\n",
+    "def m_slope(state,t,system):\n",
+    "    \n",
+    "    x,y,vx,vy = state\n",
+    "    unpack(system)\n",
+    "    \n",
+    "    pos = Vector(x,y)\n",
+    "    vel = Vector(vx,vy)\n",
+    "\n",
+    "    f_grav = calc_sgrav(pos,mass)\n",
+    "    a_grav = f_grav / mass\n",
+    "    \n",
+    "    #a_grav/m**2\n",
+    "    \n",
+    "    #print(vx)\n",
+    "    \n",
+    "    return vx,vy,a_grav.x,a_grav.y\n",
+    "\n",
     "sys_mars = make_system_planet(mars,180)\n",
     "run_odeint(sys_mars,m_slope)\n",
+    "sys_mars.results.x\n",
+    "newfig()\n",
+    "decorate(title = 'X and Y component velocity of mars',\n",
+    "         xlabel='Time (s)',\n",
+    "         ylabel='Magnitude velocity (m/s)',\n",
+    "         #xlim=[sys_mars.results.x.min(), sys_mars.results.x.max()],\n",
+    "         #ylim=[sys_mars.results.y.min(), sys_mars.results.y.max()],\n",
+    "         )\n",
+    "plot(sys_mars.results.vx, color='green')\n",
+    "plot(sys_mars.results.vy, color = 'blue')\n",
+    "plot(sqrt(sys_mars.results.vy**2+sys_mars.results.vx**2), color = 'red')\n",
     "\n",
     "\n",
-    "sys_rocket = make_system_rocket(rocket,sys_mars,180,21300*m/s)\n",
-    "ahh = SweepSeries()\n",
-    "for x in range(20000,36000,200):\n",
-    "    sys_rocket = make_system_rocket(rocket,sys_mars,180,x*m/s)\n",
-    "    #print(sys_rocket)\n",
-    "    run_odeint(sys_rocket,r_slope)\n",
+    "newfig(),\n",
+    "decorate(title = 'X and Y position of mars',\n",
+    "         xlabel='Time (s)',\n",
+    "         ylabel='Position (m)')\n",
+    "plot(sys_mars.results.x, color = 'green')\n",
+    "plot(sys_mars.results.y, color = 'blue')\n",
+    "#sys_rocket = make_system_rocket(rocket,sys_mars,180,21300*m/s)\n",
+    "#ahh = SweepSeries()\n",
+    "#for x in range(20000,36000,200):\n",
+    "#sys_rocket = make_system_rocket(rocket,sys_mars,180,x*m/s)\n",
+    "#print(sys_rocket)\n",
+    "#run_odeint(sys_rocket,r_slope)\n",
     "#print(ahh)\n",
     "\n",
     "#run_odeint(sys_rocket,r_slope)\n",
     "\n",
-    "print(\"done\")\n",
+    "#print(\"done\")\n",
     "#print(sys_rocket.results.tail)\n",
     "#com = make_system_combo(r_combo,180)\n",
     "#run_odeint(com,combo_slope)\n",
@@ -556,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -596,18 +624,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'sys_rocket' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-9-6f11a60c6765>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mrxs\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msys_rocket\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mresults\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mrys\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msys_rocket\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mresults\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mmxs\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msys_mars\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mresults\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mmys\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msys_mars\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mresults\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'sys_rocket' is not defined"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "rxs = sys_rocket.results.x\n",
@@ -620,20 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "newfig()\n",
-    "plot(rxs,label='x')\n",
-    "plot(mxs,label='y')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -743,107 +770,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def calc_mass_r(t): #What is this doing?\n",
-    "    rocket.fuel_init * -.18 * t\n",
-    "    return rocket.dry_mass + rocket.fuel_init\n",
-    "    \n",
-    "#calc_mass_r(30)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def accel_thrust(system,v,t): #NOT DONE\n",
-    "    \"\"\"\n",
-    "    Returns an accel vector of thrust given a system, the objects velocity, and time.\n",
-    "    \"\"\"\n",
-    "    unpack(system)\n",
-    "    \n",
-    "    \n",
-    "    return a_thrust"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-15-b0e9cc3c049e>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-15-b0e9cc3c049e>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    def run_phaseI()\u001b[0m\n\u001b[1;37m                    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": [
-    "def run_phaseI()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Unused Functions"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "def height_from_mars(x,y): #Assuming that mars is at the origin\n",
-    "    \"\"\"\"\n",
-    "    Given an x and y returns the distance from the center\n",
-    "    of Mars assuming that Mars is at the origin.\n",
-    "    \n",
-    "    \"\"\"\"\n",
-    "    #[theta,rho] = cart2pol(x,y) #but it doens't like big numbers\n",
-    "    x /= m #strip the units\n",
-    "    y /= m\n",
-    "    rho = sqrt(x**2+y**2) * m #distance formula\n",
-    "    height = rho - (3396200*m)\n",
-    "    return height\n",
-    "\n",
-    "def force_of_drag(v,h):\n",
-    "    \"\"\"\"\n",
-    "    Returns the force of drag given velocity of the object\n",
-    "    and it's distance away from the planet\n",
-    "    \n",
-    "    rho is the air density\n",
-    "    v is velocity of rocket\n",
-    "    c_d is drag coeffeciant of drag of the rocket but it's dependant on velocity\n",
-    "    \"\"\"\"\n",
-    "    C_d = drag(v)\n",
-    "    return -(1/2) * rho * v.mag * v * C_d * area\n",
-    "\n",
-    "def rho(h): #math from NASA https://www.grc.nasa.gov/www/k-12/airplane/atmosmrm.html\n",
-    "    \"\"\"\"\n",
-    "    Returns the air density of Mars above the ground given the height\n",
-    "    \"\"\"\"\n",
-    "    if h < 7000: #two zones for density\n",
-    "        T = -31 - 0.000998 * h #temp\n",
-    "        P = .699*exp(-0.00009*h) #pressure\n",
-    "    else:\n",
-    "        T = -23.4 - 0.00222*h\n",
-    "        P = .699*exp(-0.00009*h)\n",
-    "    return P/(.1921*(T+273.1)) #return density"
-   ]
+   "source": []
   }
  ],
  "metadata": {
