--- a/Shawn_Workspace.ipynb
+++ b/Shawn_Workspace.ipynb
@@ -307,8 +307,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## Dope sauce"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -327,11 +336,73 @@
        "(<Quantity(227900000000.0, 'meter')>, <Quantity(261993761582.48508, 'meter')>)"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "a = calc_dv(100)\n",
+    "v= calc_radii(a)\n",
+    "v"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def orbital_speed(height):\n",
+    "    #height *= m\n",
+    "    \"\"\"\n",
+    "    takes height in meters as input\n",
+    "    returns magnitude of orbital velocity at this height\n",
+    "    \"\"\"\n",
+    "    v = (G*mars.mass/height)**(1/2)\n",
+    "    return v"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "626833.0094409281 meter<sup>1.5</sup>/second"
+      ],
+      "text/latex": [
+       "$626833.0094409281 \\frac{meter^{1.5}}{second}$"
+      ],
+      "text/plain": [
+       "<Quantity(626833.0094409281, 'meter ** 1.5 / second')>"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "orbital_velocity(109)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
@@ -341,11 +412,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "a = calc_dv(100)\n",
-    "v= calc_radii(a)\n",
-    "v"
-   ]
+   "source": []
   }
  ],
  "metadata": {
