--- a/Current_Project_3.ipynb
+++ b/Current_Project_3.ipynb
@@ -21,14 +21,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "%matplotlib notebook\n",
     "from math import *\n",
     "from modsim import *\n",
-    "%matplotlib qt5\n",
-    "\n",
+    "#%matplotlib qt5\n",
     "\n"
    ]
   },
@@ -73,6 +74,7 @@
    "source": [
     "set_duration = 200000000\n",
     "num_steps = 1500\n",
+    "ahh = SweepSeries()\n",
     "\n",
     "sun = Condition(x = 0 * m, #i'm using conditions instead of systems to reduce the am't of systems we have\n",
     "             y = 0 * m,\n",
@@ -94,6 +96,7 @@
     "                duration = set_duration,\n",
     "                ts_f = num_steps                \n",
     "                  )\n",
+    "sad =saturn.orbital_radius #functions down the line not a fan of pulling from function\n",
     "\n",
     "titan = Condition(radius = 2575e3 *m,\n",
     "               mass = 1.3455e23 * kg,\n",
@@ -209,13 +212,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 31,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "def make_system_rocket(condition,system,theta,dvv):#system of Mars\n",
+    "def make_system_rocket(condition,system,theta):#system of Mars\n",
     "    \"\"\"\n",
     "    conditon of rocket\n",
     "    system of mars\n",
@@ -237,7 +238,7 @@
     "    x += xm #in reference to Mars\n",
     "    y += ym\n",
     "    #print(x,y)\n",
-    "    vx,vy = pol2cart(theta1+.5*pi*UNITS.radian,orbital_velocity(Vector(x,y).dist(Vector(xm,ym)))+dvv)\n",
+    "    vx,vy = pol2cart(theta1+.5*pi*UNITS.radian,orbital_velocity(Vector(x,y).dist(Vector(xm,ym))))\n",
     "    \n",
     "    vx = vx + mvx\n",
     "    vy = vy + mvy\n",
@@ -246,7 +247,7 @@
     "    \n",
     "    init = State(x=x,y=y,vx=vx,vy=vy)#,fuel=fuel_init)\n",
     "    tick = True\n",
-    "    return System(init=init,mass=mass,radius=radius,tick=tick,dv=dvv,dry_mass=dry_mass,ts=ts)\n",
+    "    return System(init=init,mass=mass,radius=radius,tick=tick,dry_mass=dry_mass,ts=ts)\n",
     "\n",
     "#sys_rocket = make_system_rocket(rocket,sys_mars,180)\n"
    ]
@@ -460,21 +461,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\ProgramData\\Miniconda3\\lib\\site-packages\\matplotlib\\axes\\_axes.py:545: UserWarning: No labelled objects found. Use label='...' kwarg on individual plots.\n",
-      "  warnings.warn(\"No labelled objects found. \"\n"
+      "C:\\ProgramData\\Miniconda3\\lib\\site-packages\\scipy\\integrate\\odepack.py:218: ODEintWarning: Excess work done on this call (perhaps wrong Dfun type). Run with full_output = 1 to get quantitative information.\n",
+      "  warnings.warn(warning_msg, ODEintWarning)\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<bound method NDFrame.head of                          x             y            vx            vy\n",
+       "1.000000e+00 -2.279035e+11  2.791013e-05 -5.066362e-12 -27579.991369\n",
+       "1.507548e+05 -2.278956e+11 -6.479361e+08  3.519202e+03 -24808.031276\n",
+       "3.015085e+05 -2.277838e+11 -7.259068e+09  7.705215e+02 -24067.725259\n",
+       "4.522623e+05 -2.276386e+11 -1.088629e+10  1.155540e+03 -24052.385155\n",
+       "6.030161e+05 -2.274354e+11 -1.451073e+10  1.540268e+03 -24030.914252\n",
+       "7.537698e+05 -2.271743e+11 -1.813148e+10  1.924609e+03 -24003.317681\n",
+       "9.045236e+05 -2.268552e+11 -2.174761e+10  2.308466e+03 -23969.602072\n",
+       "1.055277e+06 -2.264783e+11 -2.535819e+10  2.691743e+03 -23929.775759\n",
+       "1.206031e+06 -2.260436e+11 -2.896231e+10  3.074343e+03 -23883.848601\n",
+       "1.356785e+06 -2.255514e+11 -3.255904e+10  3.456169e+03 -23831.831839\n",
+       "1.507539e+06 -2.250016e+11 -3.614748e+10  3.837127e+03 -23773.738170\n",
+       "1.658292e+06 -2.243945e+11 -3.972670e+10  4.217120e+03 -23709.581756\n",
+       "1.809046e+06 -2.237302e+11 -4.329579e+10  4.596052e+03 -23639.378284\n",
+       "1.959800e+06 -2.230088e+11 -4.685385e+10  4.973828e+03 -23563.144947\n",
+       "2.110554e+06 -2.222306e+11 -5.039996e+10  5.350354e+03 -23480.900398\n",
+       "2.261307e+06 -2.213957e+11 -5.393322e+10  5.725533e+03 -23392.664761\n",
+       "2.412061e+06 -2.205044e+11 -5.745272e+10  6.099271e+03 -23298.459633\n",
+       "2.562815e+06 -2.195568e+11 -6.095758e+10  6.471476e+03 -23198.308076\n",
+       "2.713569e+06 -2.185533e+11 -6.444689e+10  6.842051e+03 -23092.234616\n",
+       "2.864323e+06 -2.174940e+11 -6.791977e+10  7.210905e+03 -22980.265229\n",
+       "3.015076e+06 -2.163792e+11 -7.137532e+10  7.577943e+03 -22862.427212\n",
+       "3.165830e+06 -2.152093e+11 -7.481267e+10  7.943074e+03 -22738.749856\n",
+       "3.316584e+06 -2.139844e+11 -7.823093e+10  8.306206e+03 -22609.263079\n",
+       "3.467338e+06 -2.127050e+11 -8.162924e+10  8.667245e+03 -22473.998743\n",
+       "3.618091e+06 -2.113713e+11 -8.500672e+10  9.026102e+03 -22332.990073\n",
+       "3.768845e+06 -2.099837e+11 -8.836252e+10  9.382685e+03 -22186.271588\n",
+       "3.919599e+06 -2.085425e+11 -9.169577e+10  9.736904e+03 -22033.879225\n",
+       "4.070353e+06 -2.070480e+11 -9.500561e+10  1.008867e+04 -21875.850578\n",
+       "4.221106e+06 -2.055008e+11 -9.829122e+10  1.043789e+04 -21712.224412\n",
+       "4.371860e+06 -2.039011e+11 -1.015517e+11  1.078449e+04 -21543.040919\n",
+       "...                    ...           ...           ...           ...\n",
+       "2.562814e+07  2.069607e+11 -9.057131e+10  9.698398e+03  22272.034801\n",
+       "2.577889e+07  2.083956e+11 -8.720201e+10  9.337885e+03  22426.335441\n",
+       "2.592965e+07  2.097760e+11 -8.380989e+10  8.974896e+03  22574.780115\n",
+       "2.608040e+07  2.111015e+11 -8.039584e+10  8.609529e+03  22717.328493\n",
+       "2.623116e+07  2.123717e+11 -7.696075e+10  8.241879e+03  22853.941838\n",
+       "2.638191e+07  2.135864e+11 -7.350551e+10  7.872044e+03  22984.583014\n",
+       "2.653266e+07  2.147451e+11 -7.003102e+10  7.500121e+03  23109.216494\n",
+       "2.668342e+07  2.158476e+11 -6.653821e+10  7.126210e+03  23227.808380\n",
+       "2.683417e+07  2.168936e+11 -6.302797e+10  6.750408e+03  23340.326403\n",
+       "2.698492e+07  2.178828e+11 -5.950123e+10  6.372816e+03  23446.739942\n",
+       "2.713568e+07  2.188150e+11 -5.595891e+10  5.993532e+03  23547.020030\n",
+       "2.728643e+07  2.196898e+11 -5.240193e+10  5.612659e+03  23641.139366\n",
+       "2.743719e+07  2.205072e+11 -4.883124e+10  5.230295e+03  23729.072318\n",
+       "2.758794e+07  2.212667e+11 -4.524775e+10  4.846544e+03  23810.794935\n",
+       "2.773869e+07  2.219684e+11 -4.165242e+10  4.461507e+03  23886.284952\n",
+       "2.788945e+07  2.226118e+11 -3.804617e+10  4.075285e+03  23955.521800\n",
+       "2.804020e+07  2.231970e+11 -3.442996e+10  3.687981e+03  24018.486608\n",
+       "2.819095e+07  2.237238e+11 -3.080473e+10  3.299698e+03  24075.162212\n",
+       "2.834171e+07  2.241919e+11 -2.717144e+10  2.910539e+03  24125.533163\n",
+       "2.849246e+07  2.246013e+11 -2.353102e+10  2.520608e+03  24169.585732\n",
+       "2.864322e+07  2.249518e+11 -1.988444e+10  2.130007e+03  24207.307906\n",
+       "2.879397e+07  2.252434e+11 -1.623265e+10  1.738840e+03  24238.689399\n",
+       "2.894472e+07  2.254761e+11 -1.257661e+10  1.347212e+03  24263.721653\n",
+       "2.909548e+07  2.256496e+11 -8.917279e+09  9.552256e+02  24282.397840\n",
+       "2.924623e+07  2.257641e+11 -5.255608e+09  5.629858e+02  24294.712864\n",
+       "2.939698e+07  2.258194e+11 -1.592560e+09  1.705965e+02  24300.663365\n",
+       "2.954774e+07  2.258155e+11  2.070905e+09 -2.218380e+02  24300.247721\n",
+       "2.969849e+07  2.257525e+11  5.733827e+09 -6.142137e+02  24293.466046\n",
+       "2.984925e+07  2.256303e+11  9.395248e+09 -1.006426e+03  24280.320190\n",
+       "3.000000e+07  2.254490e+11  1.305421e+10 -1.398372e+03  24260.813740\n",
+       "\n",
+       "[200 rows x 4 columns]>"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "set_duration = 30000000\n",
-    "num_steps = 100\n",
+    "num_steps = 200\n",
+    "\n",
     "mars = Condition(orbital_radius = 227.9e9 * m,\n",
     "              radius = 3396200 * m,\n",
     "              mass = .64171e24 * kg,\n",
@@ -482,8 +557,7 @@
     "              duration = set_duration,\n",
     "              ts_f = num_steps\n",
     "                )\n",
-    "#dvv = calc_dv(2400,sys_rocket)#takes in burn time\n",
-    "#print(dvv)\n",
+    "\n",
     "rocket = Condition(orbital_radius = 100000 *m + mars.radius,\n",
     "                dry_mass = 1433788 * kg,\n",
     "                rho = 0.02 * kg/m**3, #needs function to update\n",
@@ -499,92 +573,23 @@
     ")\n",
     "\n",
     "\n",
-    "def m_slope(state,t,system):\n",
-    "    \n",
-    "    x,y,vx,vy = state\n",
-    "    unpack(system)\n",
-    "    \n",
-    "    pos = Vector(x,y)\n",
-    "    vel = Vector(vx,vy)\n",
     "\n",
-    "    f_grav = calc_sgrav(pos,mass)\n",
-    "    a_grav = f_grav / mass\n",
-    "    \n",
-    "    #a_grav/m**2\n",
-    "    \n",
-    "    #print(vx)\n",
-    "    \n",
-    "    return vx,vy,a_grav.x,a_grav.y\n",
-    "\n",
-    "sys_mars = make_system_planet(mars,180)\n",
-    "run_odeint(sys_mars,m_slope)\n",
-    "sys_mars.results.x\n",
-    "newfig()\n",
-    "decorate(title = 'X and Y component velocity of mars',\n",
-    "         xlabel='Time (s)',\n",
-    "         ylabel='Magnitude velocity (m/s)',\n",
-    "         #xlim=[sys_mars.results.x.min(), sys_mars.results.x.max()],\n",
-    "         #ylim=[sys_mars.results.y.min(), sys_mars.results.y.max()],\n",
-    "         )\n",
-    "plot(sys_mars.results.vx, color='green')\n",
-    "plot(sys_mars.results.vy, color = 'blue')\n",
-    "plot(sqrt(sys_mars.results.vy**2+sys_mars.results.vx**2), color = 'red')\n",
+    "sys_mars = make_system_planet(mars,180) \n",
+    "sys_rocket = make_system_rocket(rocket,sys_mars,180)\n",
+    "run_odeint(sys_mars,m_slope) #run simulation for mars\n",
+    "xpos_mars = interpolate(sys_mars.results.x) #store its position in an interpol\n",
+    "ypos_mars = interpolate(sys_mars.results.y) #one stores the x and the other the y\n",
+    "run_odeint(sys_rocket,r_slope) #tried running the simulation using interpol in the slope function, does not work\n",
+    "                                #yet for some reason. Still need to debug\n",
     "\n",
     "\n",
-    "newfig(),\n",
-    "decorate(title = 'X and Y position of mars',\n",
-    "         xlabel='Time (s)',\n",
-    "         ylabel='Position (m)')\n",
-    "plot(sys_mars.results.x, color = 'green')\n",
-    "plot(sys_mars.results.y, color = 'blue')\n",
-    "#sys_rocket = make_system_rocket(rocket,sys_mars,180,21300*m/s)\n",
-    "#ahh = SweepSeries()\n",
-    "#for x in range(20000,36000,200):\n",
-    "#sys_rocket = make_system_rocket(rocket,sys_mars,180,x*m/s)\n",
-    "#print(sys_rocket)\n",
-    "#run_odeint(sys_rocket,r_slope)\n",
-    "#print(ahh)\n",
-    "\n",
-    "#run_odeint(sys_rocket,r_slope)\n",
-    "\n",
-    "#print(\"done\")\n",
-    "#print(sys_rocket.results.tail)\n",
-    "#com = make_system_combo(r_combo,180)\n",
-    "#run_odeint(com,combo_slope)\n",
-    "\n",
-    "#print(com.results.tail)\n",
-    "\n",
-    "#sys_mars = make_system_planet(mars,180)\n",
-    "#run_odeint(sys_mars,m_slope)\n",
-    "\n",
-    "#sys_rocket = make_system_rocket(rocket,sys_mars,180)\n",
-    "#run_odeint(sys_rocket,r_slope)\n",
-    "\n",
-    "#print(sys_rocket.results.tail)\n",
-    "#plot(sys_rocket.results.y,label='x')\n"
+    "sys_rocket.results.head\n",
+    "#animate2d_single(sys_rocket)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "newfig()\n",
-    "plot(ahh)\n",
-    "decorate(xlabel='delta V (m/s)',\n",
-    "         ylabel='Time (days)',\n",
-    "         title = 'Launch velocity compared to travel time',\n",
-    "         legend = False)\n",
-    "\n",
-    "#savefig('chap10-fig03.pdf')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -633,34 +638,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'sys_rocket' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-9-6f11a60c6765>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mrxs\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msys_rocket\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mresults\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mrys\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msys_rocket\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mresults\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mmxs\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msys_mars\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mresults\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mmys\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msys_mars\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mresults\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'sys_rocket' is not defined"
-     ]
-    }
-   ],
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
+    "def an(sys_rocket,sys_mars):\n",
+    "    rxs = sys_rocket.results.x\n",
+    "    rys = sys_rocket.results.y\n",
+    "    mxs = sys_mars.results.x\n",
+    "    mys = sys_mars.results.y\n",
     "\n",
-    "rxs = sys_rocket.results.x\n",
-    "rys = sys_rocket.results.y\n",
-    "mxs = sys_mars.results.x\n",
-    "mys = sys_mars.results.y\n",
-    "\n",
-    "animate2d(rxs,rys,mxs,mys,100)"
+    "    animate2d(rxs,rys,mxs,mys,100)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true
    },
@@ -711,30 +706,24 @@
     "    \n",
     "    return vx,vy,a_grav.x,a_grav.y\n",
     "\n",
-    "sad =saturn.orbital_radius \n",
-    "ahh = SweepSeries()\n",
+    "\n",
     "def r_slope(state,t,system):\n",
     "    \n",
     "    x,y,vx,vy = state\n",
     "    unpack(system)\n",
-    "    #tick = tick\n",
     "    pos = Vector(x,y)\n",
     "    vel = Vector(vx,vy)\n",
     "    #print(pos.mag)\n",
-    "    if(pos.mag>sad and system.tick):\n",
-    "        system.dv = int(system.dv)\n",
-    "        ahh[system.dv] = t/60/60/24\n",
-    "        #print(dv,pos.angle,t)\n",
-    "        system.tick = False\n",
-    "        #break\n",
     "    \n",
-    "    #f_grav = calc_mgrav(pos,mpos,mass)\n",
-    "    #a_grav = f_grav/mass\n",
+    "    mpos = Vector(xpos_mars(t),ypos_mars(t))*m\n",
+    "    \n",
+    "    f_grav = calc_mgrav(pos,mpos,mass)\n",
+    "    a_grav = f_grav/mass\n",
     "    \n",
     "    f_sgrav = calc_sgrav(pos,mass)\n",
     "    a_sgrav = f_sgrav/mass\n",
     "    \n",
-    "    a = a_sgrav #+ a_grav\n",
+    "    a = a_sgrav + a_grav\n",
     "    \n",
     "    return vx,vy,a.x,a.y\n",
     "\n",
@@ -765,7 +754,33 @@
     "        plot(0,0,'yo',update=False)\n",
     "        plot(mx, my, 'ro', update=True)\n",
     "        plot(rx,ry,'bo',update=True)\n",
-    "        sleep(dt / speedup)"
+    "        sleep(dt / speedup)\n",
+    "\n",
+    "def animate2d_single(sys):\n",
+    "    \"\"\"Animate the results of a projectile simulation.\n",
+    "    \n",
+    "    xs: x position as a function of time\n",
+    "    ys: y position as a function of time\n",
+    "    \n",
+    "    speedup: how much to divide `dt` by\n",
+    "    \"\"\"\n",
+    "    xs = sys.results.x\n",
+    "    ys = sys.results.y\n",
+    "\n",
+    "    # decorate the plot\n",
+    "    newfig()\n",
+    "    decorate(xlabel='x position (m)',\n",
+    "             ylabel='y position (m)',\n",
+    "             xlim=[xs.min(), xs.max()],\n",
+    "             ylim=[ys.min(), ys.max()],\n",
+    "             legend=False)\n",
+    "\n",
+    "    # loop through the values\n",
+    "    \n",
+    "    for x,y in zip(xs,ys):\n",
+    "        plot(0,0,'yo',update=False)\n",
+    "        plot(x,y,'ro',update=True)\n",
+    "        sleep(.01)"
    ]
   },
   {
